# Text_Discord_Mock_App-TDMA

./: .env.example  .gitignore  pyproject.toml
app/: main.py
app/api/dependencies/default_roles/: default_roles.py
app/api/dependencies/permission/: permissions.py
app/api/v1/endpoints/channel/: channel.py
app/api/v1/endpoints/channel/helper/: channel_helper.py
app/api/v1/endpoints/guild/: guild.py
app/api/v1/endpoints/guild/helper/: guild_helper.py
app/api/v1/endpoints/roles/: roles.py
app/api/v1/endpoints/roles/helper/: roles_helper.py
app/api/v1/endpoints/roles/schema/: roles_schema.py
app/api/v1/endpoints/user/: user.py
app/api/v1/endpoints/user/helper/: user_helper.py
app/api/v1/endpoints/user/schema/: user_schema.py
app/api/v1/router/: router.py
app/core/config/: config.py
app/core/logging/: logger.py
app/middleware/: response_wrapper.py
app/services/database/: database.py
