[project]
name = "text-discord-mock-app"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.124.2",
    "loguru>=0.7.3",
    "motor>=3.7.1",
    "passlib[argon2]>=1.7.4",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-jose[cryptography]>=3.5.0",
    "slowapi>=0.1.9",
    "uvicorn>=0.38.0",
]
